feat(FR-21): Finish delete many recommendations
